# banana_messenger

./: .gitignore  Cargo.toml  README.md  SPECIFICATIONS.md
.github/workflows/: rust.yml
banana_core/: Cargo.toml
banana_crypto/: Cargo.toml
banana_crypto/src/: argon2.rs  chacha20poly1305.rs  ed25519.rs  lib.rs  p384.rs  sha2.rs  x25519.rs  xchacha20poly1305.rs
banana_crypto/src/transport/: handshake.rs  mod.rs  serialisable_keypair.rs
banana_messenger_core/: Cargo.toml
banana_train/: Cargo.toml  README.md
banana_train/src/: banana_train.rs  config.rs  error.rs  main.rs  message.rs
banana_train/src/tasks/: listener.rs  maintenance_loop.rs  message_processor.rs  mod.rs  stream_processor.rs
common/: Cargo.toml
common/src/: lib.rs
db/: Cargo.toml
db/src/: error.rs  lib.rs  tree.rs
netwrk/: Cargo.toml  README.md  build.rs
netwrk/src/: encrypted_socket.rs  inner_stream.rs  lib.rs  listener.rs  protocol.rs  reliable_stream.rs  secure_channel.rs  serialisable_keypair.rs  stream.rs
