[workspace]
resolver = "3"
members = ["banana_crypto", "banana_messenger_core", "banana_train", "netwrk"]

[workspace.dependencies]
tokio = { version = "1.45.1", features = ["full"] }
rusqlite = { version = "0.36.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
ron = "0.10.1"
rand = "0.9.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
