[workspace]
resolver = "3"
members = [
    "banana_crypto",
    "banana_messenger_core",
    "banana_train", "common",
    "db",
    "netwrk",
]

[workspace.dependencies]
tokio = { version = "1.45.1", features = ["full"] }
rusqlite = { version = "0.36.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.22"
rand = "0.9.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
thiserror = "2.0.12"
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }
hex = "0.4.3"
