[workspace]
resolver = "3"
members = [
    "banana_crypto",
    "banana_messenger_core",
    "banana_train",
    "common",
    "db",
    "netwrk",
]

[workspace.dependencies]
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"
rand = "0.9.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
thiserror = "2.0.12"
anyhow = "1.0.98"
bincode = { version = "2.0.1", features = ["serde"] }
hex = "0.4.3"

[profile.dev.package."*"]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
incremental = false
