[package]
name = "banana_train"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
rusqlite = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
netwrk = { path = "../netwrk" }
banana_crypto = { path = "../banana_crypto" }
db = { path = "../db" }
