[package]
name = "netwrk"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
tokio = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
snow = "0.9.6"
zeroize = "1.8.1"
tokio-util = { version = "0.7.15", features = ["codec"] }
futures = "0.3.31"
bytes = "1.10.1"
