[package]
name = "netwrk"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
banana_crypto = { path = "../banana_crypto" }
bincode = { version = "2.0.1", features = ["serde"] }
tokio-util = { version = "0.7.15", features = ["codec"] }
snow = "0.9.6"
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }
futures = "0.3.31"
bytes = "1.10.1"
